--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles -->
-    <link href="css/styles.css" rel="stylesheet" />
+    <style>
+        /* Base body background */
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #d9d9d9; /* lighter grey overall page */
+            color: #212529;
+        }
+
+        /* Slightly darker grey for section splits */
+        .section-accent {
+            background-color: #c2c2c2; /* slightly darker grey */
+            padding: 3rem 0;
+        }
+
+        /* Header text styling */
+        .bg-primary {
+            background-color: #0d6efd !important;
+        }
+
+        .content-box {
+            padding: 1rem;
+        }
+
+        .fitness-img {
+            max-width: 100%;
+            border-radius: 0.5rem;
+        }
+    </style>
 </head>
 
 <body id="page-top">
@@ -70,7 +98,7 @@
 </section>
 
 <!-- Benefits -->
-<section id="services" class="bg-light py-5 section-accent">
+<section id="services" class="section-accent py-5">
     <div class="container px-4">
         <div class="row align-items-center flex-md-row-reverse">
             <div class="col-md-6 text-center mb-4 mb-md-0">
@@ -95,7 +123,7 @@
 </section>
 
 <!-- Bodybuilding Basics -->
-<section id="bodybuilding-basics" class="py-5 section-accent">
+<section id="bodybuilding-basics" class="section-accent py-5">
     <div class="container px-4">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
@@ -138,8 +166,8 @@
     </div>
 </section>
 
-<!-- YouTube (UNCHANGED) -->
-<section id="intro-video" class="bg-light py-5">
+<!-- YouTube Video -->
+<section id="intro-video" class="section-accent py-5">
     <div class="container px-4">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
@@ -154,8 +182,8 @@
     </div>
 </section>
 
-<!-- Tableau (FULLY RESTORED) -->
-<section id="tableau" class="py-5 bg-light">
+<!-- Tableau Section -->
+<section id="tableau" class="section-accent py-5">
     <div class="container-fluid px-4">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
@@ -208,3 +236,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
