--- a/trivia.html
+++ b/trivia.html
@@ -7,7 +7,9 @@
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" />
+
+    <!-- Custom styles -->
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body class="bg-light">
@@ -123,10 +125,12 @@
     </div>
 </section>
 
-<!-- GAME SCRIPT (UNCHANGED) -->
+<!-- GAME SCRIPT -->
 <script>
 /* ================= QUESTION BANK ================= */
-const questions = [ /* QUESTIONS UNCHANGED — OMITTED FOR BREVITY */ ];
+const questions = [ /* QUESTIONS OMITTED FOR BREVITY */ ];
+
+/* ================= GAME LOGIC ================= */
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
