--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,9 @@
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" />
+
+    <!-- Custom styles -->
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -133,3 +135,4 @@
 
 </body>
 </html>
+
