--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Custom styles -->
     <style>
-        /* Base body background */
+        /* Base body styling */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -24,15 +24,17 @@
             padding: 3rem 0;
         }
 
-        /* Header text styling */
+        /* Header colors */
         .bg-primary {
             background-color: #0d6efd !important;
         }
 
+        /* Box styling */
         .content-box {
             padding: 1rem;
         }
 
+        /* Image styling */
         .fitness-img {
             max-width: 100%;
             border-radius: 0.5rem;
@@ -72,13 +74,12 @@
     </div>
 </header>
 
-<!-- About -->
+<!-- About Section -->
 <section id="about" class="py-5 section-accent">
     <div class="container px-4">
         <div class="row align-items-center">
             <div class="col-md-6 text-center mb-4 mb-md-0">
-                <img src="images/chrisbumstead.jpg" alt="Bodybuilding inspiration"
-                     class="img-fluid fitness-img">
+                <img src="images/chrisbumstead.jpg" alt="Bodybuilding inspiration" class="img-fluid fitness-img">
             </div>
             <div class="col-md-6 content-box">
                 <h2>About Personal Training</h2>
@@ -97,13 +98,12 @@
     </div>
 </section>
 
-<!-- Benefits -->
+<!-- Benefits Section -->
 <section id="services" class="section-accent py-5">
     <div class="container px-4">
         <div class="row align-items-center flex-md-row-reverse">
             <div class="col-md-6 text-center mb-4 mb-md-0">
-                <img src="images/fitness.png" alt="Fitness benefits"
-                     class="img-fluid fitness-img">
+                <img src="images/fitness.png" alt="Fitness benefits" class="img-fluid fitness-img">
             </div>
             <div class="col-md-6 content-box">
                 <h2>Training Benefits</h2>
@@ -122,13 +122,12 @@
     </div>
 </section>
 
-<!-- Bodybuilding Basics -->
+<!-- Bodybuilding Basics Section -->
 <section id="bodybuilding-basics" class="section-accent py-5">
     <div class="container px-4">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
-                <img src="images/weights.jpg" alt="Weight training"
-                     class="img-fluid fitness-img mb-4">
+                <img src="images/weights.jpg" alt="Weight training" class="img-fluid fitness-img mb-4">
 
                 <div class="content-box text-start">
                     <h2 class="text-center">Bodybuilding Basics</h2>
@@ -166,7 +165,7 @@
     </div>
 </section>
 
-<!-- YouTube Video -->
+<!-- YouTube Video Section -->
 <section id="intro-video" class="section-accent py-5">
     <div class="container px-4">
         <div class="row justify-content-center">
@@ -233,7 +232,9 @@
     vizElement.parentNode.insertBefore(scriptElement, vizElement);
 </script>
 
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
 
